<resources>
    <string name="app_name">ERCSHouseResources</string>
    <string name="str_login">登录</string>
    <string name="str_phone_id">手机账号</string>
    <string name="str_pwd">密码</string>
    <string name="str_surepwd">确认密码</string>
    <string name="str_resetpassword">重置密码</string>
    <string name="str_code">识别码</string>
    <string name="str_find_pwd">忘记密码</string>
    <string name="str_phone_number">手机号码</string>
    <string name="str_vcode">验证码</string>
    <string name="str_get_vcode">获取验证码</string>
    <string name="str_input_vcode">填写验证码</string>
    <string name="str_input_pwd">填写密码</string>
    <string name="str_message">消息</string>
    <string name="str_houseResources">房源</string>
    <string name="str_service">服务</string>
    <string name="str_mine">我的</string>
    <string name="str_clerk">职员列表</string>
    <string name="str_clockin">考勤打卡</string>
    <string name="str_attendance">考勤记录</string>
    <string name="str_attendancedetail">考勤详情</string>
    <string name="str_field">外勤记录</string>
    <string name="str_fieldclockin">外勤打卡</string>
    <string name="str_scheduling">排班情况</string>
    <string name="str_processpay">流程申请</string>
    <string name="str_process">流程审批</string>
    <string name="str_memberAssess">员工考核记录</string>
    <string name="str_memberOutAssess">员工外勤记录</string>
    <string name="str_allprocess">所有流程</string>
    <string name="str_set">设置</string>
    <string name="str_callphone">拨打电话</string>
    <string name="str_selectattendance">查看考勤</string>
    <string name="str_selectfield">查看外勤</string>
    <string name="str_updatepwd">修改密码</string>
    <string name="str_exit">退出</string>
    <string name="str_cancel">取消</string>
    <string name="str_againinputsure">在次填写确认</string>
    <string name="str_resetpasswordhit">重置至少六位密码</string>
    <string name="str_lookanother">查看其它员工考勤记录</string>
    <string name="str_lookanothers">查看其它员工外勤记录</string>
    <string name="str_rest">休息</string>
    <string name="str_out">外出</string>
    <string name="str_retroactive">补签</string>
    <string name="str_processtype">流程类型:</string>
    <string name="str_starttime">开始时间:</string>
    <string name="str_endtime">结束时间:</string>
    <string name="str_timelong">时长(时):</string>
    <string name="str_leavereason">请假理由:</string>
    <string name="str_picture">图片:</string>
    <string name="str_directorscolded">主管批语,可选填,最多不超过50个字</string>
    <string name="str_pass">通过</string>
    <string name="str_nopass">不通过</string>
    <string name="str_inputname">请输入姓名</string>
    <string name="str_onlyselectmyscheduling">只查看我的排班</string>
    <string name="str_loading">Loading...</string>
    <string name="str_chose">筛选</string>
    <string name="str_post">提交</string>
    <string name="str_processtypes">流程类型</string>
    <string name="str_pleasechose">请选择(必填)</string>
    <string name="str_retroactivedata">补签日期:</string>
    <string name="str_retroactivecount">补签班次:</string>
    <string name="str_inputreason">请输入事由(必填)</string>
    <string name="str_pic">图片</string>
    <string name="str_timeslong">时长</string>
    <string name="str_erquired">必填</string>
    <string name="str_outofbounds">不在考勤打卡范围内</string>
    <string name="str_contactadministrator">联系管理员</string>
    <string name="str_unlimited">不限</string>
    <string name="str_houseprice">售房价格</string>
    <string name="str_rentalprice">租房价格</string>
    <string name="str_minprice">最低价格</string>
    <string name="str_maxprice">最高价格</string>
    <string name="str_sure">确认</string>
    <string name="str_onehouse">一室</string>
    <string name="str_twohouse">二室</string>
    <string name="str_threehouse">三室</string>
    <string name="str_fourhouse">四室</string>
    <string name="str_fivehouse">五室</string>
    <string name="str_sixhouse">六室</string>
    <string name="str_transaction">交易</string>
    <string name="str_orientation">朝向</string>
    <string name="str_builtarea">建筑面积(平)</string>
    <string name="str_type">类型</string>
    <string name="str_purpose">用途</string>
    <string name="str_renovation">装修</string>
    <string name="str_date">日期</string>
    <string name="str_empty">清空</string>
    <string name="str_mineara">最小面积</string>
    <string name="str_maxeara">最大面积</string>
    <string name="str_procon">置业顾问</string>
    <string name="str_closingbonus">成交奖励</string>
    <string name="str_dynamic">动态</string>
    <string name="str_settlementcycle">结算周期</string>
    <string name="str_settlementcycles">结算周期-</string>
    <string name="str_lease">出租</string>
    <string name="str_sell">出售</string>
    <string name="str_leasesell">租售</string>
    <string name="str_seereward">带看奖励</string>
    <string name="str_deservedcommission">应得佣金</string>
    <string name="str_pointcommission">结佣结点</string>
    <string name="str_commission">佣金说明</string>

    <string name="str_addclient">添加客户</string>
    <string name="str_man">先生</string>
    <string name="str_woman">女生</string>
    <string name="str_save">保存</string>
    <string name="str_add">+</string>
    <string name="str_minus">-</string>

    <!--异常字符串-->
    <string name="error_tel">请输入正确手机号！</string>
    <string name="error_tel_number">请填写手机号码</string>
    <string name="error_connect">与服务器通信异常！</string>
    <string name="error_net">未检测到网络！</string>
    <string name="error_pwd">请输入密码！</string>
    <string name="error_name">请输入查询的姓名！</string>
    <string name="error_nodata">没有查询到相关数据！</string>
    <string name="error_tyve">请选择流程类型！</string>
    <string name="error_reson">请输入申请事由！</string>
    <string name="error_starttime">请选择开始时间！</string>
    <string name="error_endtime">请选择结束时间！</string>
    <string name="error_retroactivedata">请选择补签日期！</string>
    <string name="error_retroactivetype">请选择补签班次！</string>
    <string name="error_inputname">请输入姓名</string>
    <!--其它字符串-->
    <string name="str_welcome">欢迎您</string>
    <string name="str_leftbracket">[</string>
    <string name="str_rightbracket">]</string>
    <string name="str_chosepic">请选择图片</string>
</resources>
