<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:background="@color/system_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/d_18"
            android:text="@string/str_find_pwd"/>
        <ImageView
            android:id="@+id/iv_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/d_10"
            android:src="@mipmap/goback"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="@dimen/d_10"
            android:textColor="@color/white"
            android:textSize="@dimen/d_16"
            android:text="@string/str_login"
            />
    </FrameLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/d_50"
          android:orientation="horizontal"
          android:gravity="center">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/str_phone_number"
              android:textSize="@dimen/d_16"
              android:textColor="@color/black1"
              android:layout_marginLeft="@dimen/d_10"/>
          <EditText
              android:layout_width="@dimen/d_0"
              android:layout_height="wrap_content"
              android:hint="@string/error_tel_number"
              android:layout_weight="1"
              android:background="@color/white"
              android:layout_marginLeft="@dimen/d_10"
              android:textSize="@dimen/d_16"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/str_get_vcode"
              android:padding="@dimen/d_10"
              android:gravity="center"
              android:textColor="@color/white"
              android:layout_marginRight="@dimen/d_10"
              android:background="@drawable/btn_vcode_bg"/>
      </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/black1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_vcode"
            android:textSize="@dimen/d_16"
            android:textColor="@color/black1"
            android:layout_marginLeft="@dimen/d_10"/>
        <EditText
            android:layout_width="@dimen/d_0"
            android:layout_height="match_parent"
            android:hint="@string/str_input_vcode"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/d_25"
            android:textSize="@dimen/d_16"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/black1"/>
</LinearLayout>