<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/d_5"
            android:paddingTop="@dimen/d_5"
            android:text="@string/str_rest" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/d_5"
            android:paddingTop="@dimen/d_5"
            android:text="@string/str_out" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_retroactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/d_5"
            android:paddingTop="@dimen/d_5"
            android:text="@string/str_retroactive" />


    </LinearLayout>
</LinearLayout>