<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/include_title" />

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_10"
        android:paddingBottom="@dimen/d_10">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="@dimen/d_50"
            android:layout_height="@dimen/d_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" android:layout_marginLeft="@dimen/d_10">

            <TextView
                android:layout_gravity="top"
                android:id="@+id/tv_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_0"
                android:layout_weight="1"/>

            <TextView
                android:layout_gravity="bottom"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray"
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_0"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2" />

    <LinearLayout
        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_processtype" />

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/orange"
            android:id="@+id/tv_processtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--休息 外出-->
    <LinearLayout
        android:id="@+id/ll_rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_10"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_starttime" />

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/black"
            android:id="@+id/tv_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_10"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_endtime" />

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:id="@+id/tv_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_timelong" />

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:id="@+id/tv_timelong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>




    <!--补签-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_retroactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:paddingLeft="@dimen/d_16"
            android:paddingTop="@dimen/d_10"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_retroactivedata" />

            <TextView
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"
                android:id="@+id/tv_retroactivetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/d_16"
            android:paddingTop="@dimen/d_10"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_retroactivecount" />

            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:id="@+id/tv_retroactivetype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout

        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_10"
        android:paddingBottom="@dimen/d_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:textSize="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_leavereason" />

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:id="@+id/tv_leavereason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2" />

    <EditText
        android:padding="@dimen/d_16"
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/white"
        android:textSize="@dimen/sp_14"
        android:gravity="top|left"
        android:hint="@string/str_directorscolded" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_nopass"
            android:layout_width="@dimen/d_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_nopass" />

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="@dimen/d_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_pass" />
    </LinearLayout>
</LinearLayout>