<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/d_16"
        android:layout_marginRight="@dimen/d_16"
        android:layout_marginBottom="@dimen/d_10"
        android:background="@drawable/dialog_cornerbg">
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/d_13"
        android:paddingTop="@dimen/d_13"
        android:textColor="@color/system_color"
        android:textSize="@dimen/d_16"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2"/>
    <TextView
        android:id="@+id/tv_callphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_callphone"
        android:textColor="@color/black"
        android:paddingBottom="@dimen/d_13"
        android:paddingTop="@dimen/d_13"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2"/>
    <TextView
        android:id="@+id/tv_selectattendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_selectattendance"
        android:textColor="@color/black"
        android:paddingBottom="@dimen/d_13"
        android:paddingTop="@dimen/d_13"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2"/>
    <TextView
        android:id="@+id/tv_selectfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_selectfield"
        android:textColor="@color/black"
        android:paddingBottom="@dimen/d_13"
        android:paddingTop="@dimen/d_13"
        android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1"
            android:background="@color/white2"/>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/d_13"
            android:paddingTop="@dimen/d_13"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>