<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
    <TextView
        android:layout_marginLeft="@dimen/d_10"
        android:paddingBottom="@dimen/d_5"
        android:paddingTop="@dimen/d_5"
        android:id="@+id/tv_unlimited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/d_14"
        android:text="@string/str_unlimited"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2" />
    
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="@dimen/d_10"
            android:paddingBottom="@dimen/d_5"
            android:paddingTop="@dimen/d_5"
            android:layout_width="@dimen/d_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/d_14"
            android:text="@string/str_houseprice"/>
        <TextView
            android:layout_marginLeft="@dimen/d_10"
            android:paddingBottom="@dimen/d_5"
            android:paddingTop="@dimen/d_5"
            android:layout_width="@dimen/d_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="@dimen/d_14"
            android:text="@string/str_rentalprice"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ListView
            android:scrollbars="none"
            android:id="@+id/lv_houseprice"
            android:layout_width="@dimen/d_0"
            android:layout_weight="1"
            android:dividerHeight="@dimen/d_1"
            android:divider="@color/gray"
            android:layout_height="@dimen/pop_listview"></ListView>

        <ListView
            android:scrollbars="none"
            android:id="@+id/lv_rentalprice"
            android:layout_width="@dimen/d_0"
            android:layout_weight="1"
            android:dividerHeight="@dimen/d_1"
            android:divider="@color/gray"
            android:layout_height="@dimen/pop_listview"></ListView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/white2" />
    <RelativeLayout
        android:layout_marginLeft="@dimen/d_10"
        android:layout_marginRight="@dimen/d_10"
        android:layout_marginTop="@dimen/d_10"
        android:layout_marginBottom="@dimen/d_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:padding="@dimen/d_5"
            android:background="@drawable/edit_gray_bg"
            android:singleLine="true"
            android:id="@+id/edit_minprice"
            android:layout_width="@dimen/d_100"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/black"
            android:hint="@string/str_minprice"
            android:inputType="number"/>
        <View
            android:layout_marginLeft="@dimen/d_5"
            android:layout_marginRight="@dimen/d_5"
            android:id="@+id/view"
            android:layout_toRightOf="@id/edit_minprice"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/d_10"
            android:layout_height="@dimen/d_1"
            android:background="@color/gray"></View>
        <EditText
            android:inputType="number"
            android:padding="@dimen/d_5"
            android:background="@drawable/edit_gray_bg"
            android:singleLine="true"
            android:layout_toRightOf="@id/view"
            android:id="@+id/edit_maxprice"
            android:layout_width="@dimen/d_100"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/black"
            android:hint="@string/str_maxprice"/>

        <TextView
            android:padding="@dimen/d_5"
            android:background="@drawable/tv_system_bg"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_sure"
            android:layout_width="@dimen/d_100"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/str_sure"
            />
    </RelativeLayout>

    </LinearLayout>
    <View
        android:id="@+id/view_null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></View>
</LinearLayout>
